*Empty MediaWiki Message*

--- a/Вильянди_ош.mw
+++ b/Вильянди_ош.mw
@@ -29,7 +29,7 @@
  |община в таблице        = 
  |внутреннее деление      = 
  |вид главы               = мэр
- |глава                   =Пееп Ару
+ |глава                   =Андо Кивиберг
  |дата основания          = 1283 ие
  |первое упоминание       =
  |прежние имена           = Феллин
