--- a/Тарту_ош.mw
+++ b/Тарту_ош.mw
@@ -31,7 +31,7 @@
  |община в таблице        = 
  |внутреннее деление      = 
  |вид главы               = мэр
- |глава                   = Урмас Круузе
+ |глава                   = Урмас Клаас
  |дата основания          = 1030 ие
  |первое упоминание       = 
  |прежние имена           = 
