--- a/Кацялай_(Кочкурбуе).mw
+++ b/Кацялай_(Кочкурбуе).mw
@@ -3,7 +3,7 @@
  |статус                  = веле
  |Эрзянь лем              = Кацялай
  |оригинальное название   ={{Lang-ru|с. Качелай}}
- |изображение             = 
+ |изображение             = Kacyalaj vele Kochkurbue.jpg
  |подчинение              = 
  |мастор                  = Россия
  |герб                    = 
@@ -64,7 +64,7 @@
 Ашти [[Лашма лей]] ды [[Сура лей]] лангсо, 54 [[вайгельпе|вп]] [[Саранск]]ойстэ ды 30 вп буень куншка таркастонть -  [[Кочкур веле (Кочкурбуе)|Кочкур велестэ]]. Шабрацек [[Пензань ёнкс]]онь Соколовка велесь (7 вп).
 
 Кода лецтяви ({{Lang-ru|Списке населенных мест Пензенской губернии}}) ([[1869 ие]]) Кочкур веле  ({{Lang-ru|Кочкурово (Рождественское) }}) - 139 кудот марто (1 170 лом.) Саранонь уездсэ. 
-
+[[File:Sura lej Kacyalaj vaksso.jpg|thumb|250px|left|[[Сура лей|Сура леесь]] Кацялай веленть ваксо.]]
 Кода сёрмады [[Цыганкин, Дмитрий Васильевич|Дмитрий Цыганкин]] велесэнть улить<ref>[http://www.cigankin.ru/archives/779 В мире названий мелких географических объектов {{Ref-ru}}]]</ref>: Цеця Вирь, Калмо Алкс.
 == Веленть лемденть  ==
 Лемесь-антророним:  эрзянь ''Каця (Кацел)<ref>[http://mnogolik-mordovia.mrsu.ru/m_Kachelay_s.htm Многоликая Мордовия:  Село Качелай {{Ref-ru}}]]</ref>'' лементь эйстэ. 
