--- a/Сура_лей.mw
+++ b/Сура_лей.mw
@@ -24,7 +24,7 @@
 '''Су́ра лей''' — витьёнонь [[Рав|Равонть]] сянглей. 
 
 Чуди [[Ульянонь ёнкс|Улянонь]], [[Алоошонь ёнкс|Алоошонь]], [[Пенза ёнкс|Пенза]] ёнкстнэва, [[Мордовия Республикась|Мордовиясо]] ды [[Ветькень Республикась|Ветькень Мастортнева]]. Леенть кувалмозо 841 [[Вайгельпе|вп]], кувалмозо весемезэ 67,5 тёж. вп². Ушоды чудеме Рав ёнксонь (Приволжскоень) вере таркасто ды чуди эзганзо васня [[Чивалгома|чивалгомав]], мейле [[Пелеве ёнкс|пелевеёнов]]. Алочудемасонзо [[Ведьга панема|ведьга панемав]] ды [[Венчень якамо|венчень якамов]]. Лезэ саеви промшленостень ведень максоманть кис. 
-
+[[File:Sura lej Kacyalaj vaksso.jpg|thumb|left|250px|Сура леесь [[Кацялай (Кочкурбуе)|Кацялай веленть]] ваксо, [[Кочкурбуе]]сэ.]]
 Ярсамозо-симеманзо [[Лов|ловонь]]. Чадыведесь ушодови [[Чадыков|чадыковсто]], кельми [[Сундерьков|сундерьковсто]] — [[Ацамков|ацамковсто]], панжови [[Эйзюрков|эйзюрковонь]] прядовомсто — [[Чадыков|чадыковсто]]. 
 
 Сура лей лангсо аштить Сурск, [[Пенза ош|Пенза]], [[Ратор ош|Ратор]], Ядрин оштнэ.
