*Empty MediaWiki Message*

--- a/Ратор_лей.mw
+++ b/Ратор_лей.mw
@@ -30,6 +30,7 @@
 Ярсамозо-симеманзо [[Лов|ловонь]]. Пры [[Сура лей|Суралеентень]] Ратор ошонь малавикссэ. Кельми — [[Ацамков|ацамковсто]], панжови [[Чадыков|чадыковсто]]. [[Ведьга панема|Ведьга панемавксов]].
 
 == Сянглеензэ ==
+[[File:Rator lej Ordanjbye.jpg|thumb|left|350px|Ратор леесь [[Мокровка (Орданьбуе)|Мокровка веленть]] ваксо, [[Орданьбуе]].]]
 Покш сянглейтне:
 * [[Рудня лей]] (вить ёнонь сянглей),
 * [[Инесаро лей]] (вить ёнонь сянглей).
