*Empty MediaWiki Message*

--- a/Орданьбуе_(Мордовия).mw
+++ b/Орданьбуе_(Мордовия).mw
@@ -57,7 +57,7 @@
 == Потмомодань ведть ==
 
 == Велькс ведть ==
-[[File:Rator lej Ordanjbye.jpg|thumb|350px|Ратор леесь [[Мокровка (Орданьбуе)|Мокровка веленть]] ваксо, [[Орданьбуе]].]]
+[[File:Rator lej Ordanjbye.jpg|thumb|350px|[[Ратор лей|Ратор леесь]] [[Мокровка (Орданьбуе)|Мокровка веленть]] ваксо, [[Орданьбуе]].]]
 == Модат ==
 
 == Касовкс ==
