--- a/Колазь_веле_(Орданьбуе).mw
+++ b/Колазь_веле_(Орданьбуе).mw
@@ -60,6 +60,7 @@
 }}
 '''Колазьвеле<ref name="Многоликая"/>''' ({{Lang-ru|с. Каласево}}) — те эрзянь<ref name="Многоликая">[http://mnogolik-mordovia.mrsu.ru/a_Kalasevo.htm Многоликая Мордовия: Село Каласево] {{Ref-ru}}</ref> веле [[Орданьбуе]]сэ [[Мордовия Республикась|Мордовия Республикасо]].
 
+[[File:Kolazjvele.jpg|thumb|thumb|left|250px|Кисьэнть Колазь веле ёнов пурдавкс]]
 Ашти [[Канаклейка]]нть  [[Ратор лей]]с<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref> прамосонть. Лецтяви ({{Lang-ru|Списке населенных мест Симбирской губернии}}) ([[1863 ие]]) ''Каласево  — 80<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref> кудот марто Ордань уездсэ ''. 
 == Веленть лемденть  ==
 Лемесь–антропоним, саеви эрзянь кезерень: '''Колась'''<ref name="Память, запечатленная в слове"/> лемстэнть ({{Lang-myv| коламс }} {{Lang-ru|«разладить; испортить настроение»}}).
