--- a/Орданьбуе_(Мордовия).mw
+++ b/Орданьбуе_(Мордовия).mw
@@ -68,6 +68,7 @@
 
 == Велеть ==
 эрзянь велеть:
+[[File:Kolazjvele.jpg|thumb|350px|[[Колазь веле (Орданьбуе)|Колазь веле]] ёнов пурдавкс. Мордовиясо, Россиянь Мастор]]
 * [[Аловеле (Орданьбуе)|Аловеле]] ({{lang-ru|с. Низовка}})
 * [[Андрейвеле (Орданьбуе)]] — эрзянь веле [[Орданьбуе]]сэ. 
 * [[Орданьбуе  (Орданьбуе)|чугункань станция Орданьбуе]] ({{lang-ru|железнодорожная станция Ардатов}})
