/* Покш Килейбуень велеть */

--- a/Покш_Килейбуе.mw
+++ b/Покш_Килейбуе.mw
@@ -65,6 +65,7 @@
 == Икелень эрямо кевкстемась ==
 == Покш Килейбуень велеть ==
 эрзянь велеть:
+[[File:Gosagyr vele.jpg|thumb|250px| [[Госагыр веле (Покш Килейбуе)|Госагыр]] — эрзянь веле Мордовиянь Покш Килейбуесэ, Россиясо.]]
 * [[Алу Парынз веле (Покш Килейбуе)|Алу Парынз веле]] ({{lang-ru| с. Черная Промза}})
 * [[Бозаев веле (Покш Килейбуе)|Бозаев веле]] ({{lang-ru|с. Бузаево}})
 * [[Вейца веле (Покш Килейбуе)|Вейца веле]] ({{lang-ru|п. Вейсэ}})
@@ -74,13 +75,14 @@
 * [[Кузым веле (Покш Килейбуе)|Кузым веле]] ({{lang-ru|с. Гузынцы}})
 * [[Молния веле (Покш Килейбуе)|Молния веле]] ({{lang-ru|п. Молния}})
 * [[Парынзэле (Покш Килейбуе)|Парынзэле]] (лиякс кортыть: Вере Паронза) ({{lang-ru|c. Паракино}}) 
+[[File:Gosagyr vele Nikoljskoj cerkuva.jpg|thumb|250px|Никольской церькува (архитектурань теевкс 2-це пельксэнть XIX п.)  [[Госагыр веле (Покш Килейбуе)|Госагыр]] эрзянь велесэ, Мордовиянь Покш Килейбуесэ]]
 * [[Пермезь веле (Покш Килейбуе)|Пермезь веле]] ({{lang-ru|с. Пермиси}})
 * [[Симкина веле (Покш Килейбуе)|Симкина веле]] ({{lang-ru|с. Симкино}})
 * [[Симкинской Лесничества (Покш Килейбуе)|Симкинской Лесничества]] ({{lang-ru|Симкинское Лесничество}})
 * [[Судось веле (Покш Килейбуе)|Судось веле]] ({{lang-ru|с. Судосево}})  
 * [[Ташто Найман веле (Покш Килейбуе)|Ташто Найман веле]]  (кортамокельсэ: Эрзянь Найман) {{lang-ru|с. Старые Найманы}})  
 * [[Шугур веле (Покш Килейбуе)|Шугур веле]] ({{lang-ru|с. Шугурово}})    
-
+[[File:Gosagyr vele Lovnoma kudo.jpg|thumb|250px| [[Госагыр веле (Покш Килейбуе)|Госагырынь]] ловнома кудо — эрзянь веле]]
 рузонь велеть:
 * [[Александровка (Покш Килейбуе)|Александровка]] ({{lang-ru|п. Александровка}})    
 * [[Айкино (Покш Килейбуе)|Айкино]] ({{lang-ru|с. Айкино}})    
