*Empty MediaWiki Message*

--- a/Суро.mw
+++ b/Суро.mw
@@ -40,7 +40,7 @@
 | grin             = 
 | ipni              = 
 }}
-''Суро'' ({{Lang-lat| ''Panicum miliaceum''}}) — вейкеиень буестэ сюронь тикше. Сонзе озавтыть ярсамонть коряс ломанть.
+''Суро'' ({{Lang-lat| ''Panicum miliaceum''}}) — вейкеиень буестэ сюронь [[тикше]]. Сонзе озавтыть ярсамонть коряс ломанть.
 
 == Содамоёвкст ==
 
