*Empty MediaWiki Message*

--- a/Товзюро.mw
+++ b/Товзюро.mw
@@ -39,11 +39,11 @@
 | grin             = 
 | ipni              = 
 }}
-''Товзюро'' ({{Lang-lat| ''Tríticum''}}) — вейке эли кавтоиень буестэ сюронь тикше. Сонзе озавтыть ярсамонть коряс ломанть.
+''Товзюро'' ({{Lang-lat| ''Tríticum''}}) — вейке эли кавтоиень буестэ сюронь [[тикше]]. Сонзе озавтыть [[ярсамопель|ярсамонть]] коряс ломанть.
 
 Валонть смустезе кавто валсо: [[тов]] ды [[сюро]].
 
-Сех паро се товзюрось, конасо седе ламо ули белок, ды кона касы степень коське климатсонть, раужо модасо. Товзюрось эрси ярвоень ды озимень. Озим товзюронть виднесызь [[сёксь|сёксня]], омбоце [[ие]]стэ озимэсь касы трубкакс, каи пря ды кенери. Ярвой товзюронть виднесызь [[тундо|тунда]], [[кизэ]]нь ютамс зёрназо сонзэ кенери. 
+Сех паро се товзюрось, конасо седе ламо ули белок, ды кона касы степень коське климатсонть, раужо [[мода]]со. Товзюрось эрси ярвоень ды озимень. Озим товзюронть виднесызь [[сёксь|сёксня]], омбоце [[ие]]стэ озимэсь касы трубкакс, каи пря ды кенери. Ярвой товзюронть виднесызь [[тундо|тунда]], [[кизэ]]нь ютамс зёрназо сонзэ кенери. 
 
 == Содамоёвкст ==
 
