*Empty MediaWiki Message*

--- a/Титиря.mw
+++ b/Титиря.mw
@@ -39,7 +39,7 @@
 | grin             = 6643
 | ipni              = 
 }}
-'''Титиря''' (лиякс мерить: '''Чичавка<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5-7493-0433-7.,{{ref-ru}},{{ref-myv}}</ref>''', '''цициря''', '''ясмук''', ({{lang-la|Lens}}, {{lang-ru| ''Чечевица''}}) —  [[тикше]]нь касовкст Бобань семиястонть (Fabáceae). 
+'''Титиря''' (лиякс мерить: '''Чичавка<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5-7493-0433-7.,{{ref-ru}},{{ref-myv}}</ref>''', '''цициря''', '''ясмук''', ({{lang-la|Lens}}, {{lang-ru| ''Чечевица''}}) —  [[тикше]]нь касовкст [[Бобансетнень раськесь|Бобань семиястонть]] (Fabáceae). 
 == Тикшень лемтне ==
 
 == Содамоёвкст ==
