*Empty MediaWiki Message*

--- a/Акация.mw
+++ b/Акация.mw
@@ -1,5 +1,5 @@
 [[Image:Siberian Pea shrub.jpg|thumb|250px|right|border|Акация]]
-'''Акация''' ({{Lang-la|Caragana arborescens}}) — бобань семиясто мазый куракш. Тарадонзо кеметь, човинеть. Лопанзо аштить зярыя вишкине лопинестэ. Цецянзо [[ожо|ожот]], тантейсте качадыть, мекшне саить медярво. Видьмензэ кувтел потсот, сынст ярсыть [[нармунть]]. Акациясь касы пиресе пирявксонь таркас, вальмалга. 
+'''Акация''' ({{Lang-la|Caragana arborescens}}, {{lang-ru|''Карага́на древови́дная'', или ''Жёлтая ака́ция''}})  — бобань семиясто мазый куракш. Тарадонзо кеметь, човинеть. Лопанзо аштить зярыя вишкине лопинестэ. Цецянзо [[ожо|ожот]], тантейсте качадыть, мекшне саить медярво. Видьмензэ кувтел потсот, сынст ярсыть [[нармунть]]. Акациясь касы пиресе пирявксонь таркас, вальмалга. 
 
 == Тикшень лемтне ==
 [[Алоошонь ёнкс|Алоошонь ёнкссонь]] [[Лугаян буе|Лугаян буень]] Иваньбиесэ  тензе мерить ''стругельник''.
