*Empty MediaWiki Message*

--- a/Вараканьбал.mw
+++ b/Вараканьбал.mw
@@ -1,5 +1,5 @@
 [[Image:Trifolium pratense - Keila.jpg|thumb|350px|right|border|Вараканьбал]]
-'''Вараканьбал''' ({{Lang-la|Trifolium pretense}}) — кавто ды седее ламо иень перть касыця тике. Бобабнь семиянь. 
+'''Вараканьбал''', лиякс: '''вараканьпал<ref name="Русско-эрзянский ботанический"/>''', '''вараканьпря тикше<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5-7493-0433-7., {{ref-ru}}, {{ref-myv}}</ref>''' ({{Lang-la|Trifolium pretense}}) — кавто ды седее ламо иень перть касыця тике. Бобабнь семиянь. 
 
 Лопазо аштить [[3 (ловома вал)|колмо]] лопинестэ, вейс касозь. Вишкине цецянзо пурназь вейке шаронь кондямо пряс. Цецянзо тантейстэ качадыть, бордовой тюсонь. Вараканьбалось кассы луга лангсо эли сонзэ виднить паксяс. Сон ловови вадря кормокс ды ормадо лезэв тикшекс. Кочкить тикшенть [[якстере]] прянзо.  Теить эйстэнзэ чай, симить козомсто, экшендемстэ. Мекшетне саить  медярво.
 
