*Empty MediaWiki Message*

--- a/Идем_вика.mw
+++ b/Идем_вика.mw
@@ -39,7 +39,7 @@
 | grin             = 11452
 | ipni              = 
 }}
-'''Идем вика<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5-7493-0433-7.,{{ref-ru}},{{ref-myv}}</ref>''' ({{lang-la|Láthyrus}}, {{lang-ru| ''Чи́на''}}) — вейкеиень ды ламоиень [[тикше]]нь касовкст Бобань семиястонть (Fabáceae).  Латинэнь лемэсь саеви кавто грекень ''la'' — «пек» ды ''thuros'' — «вечкевикс» валтнестэ.
+'''Идем вика<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5-7493-0433-7.,{{ref-ru}},{{ref-myv}}</ref>''' ({{lang-la|Láthyrus}}, {{lang-ru| ''Чи́на''}}) — вейкеиень ды ламоиень [[тикше]]нь касовкст [[Бобансетнень раськесь|Бобань семиястонть]] (Fabáceae).  Латинэнь лемэсь саеви кавто грекень ''la'' — «пек» ды ''thuros'' — «вечкевикс» валтнестэ.
 
 == Тикшень лемтне ==
 * ({{Lang-lat|Ldthyrus pratensis L.}}, {{lang-ru| ''Чина луговая''}})  - '''''лугалангонь идем вика'''''<ref name="Русско-эрзянский ботанический"/>. 
