*Empty MediaWiki Message*

--- a/Тюс.mw
+++ b/Тюс.mw
@@ -46,5 +46,87 @@
 * Тюжт мери
 * Якстерди
 
+{| border=1
+!Тюс!!Неямозо тюсонть
+|-
+|[[Раужо]]
+|bgcolor=black|
+|-
+|[[Раужт мери]]
+|bgcolor=gray|
+|-
+|[[Сияжды]]
+|bgcolor="#E0E0E0"|
+|-
+|[[Ашо]]
+|bgcolor="white"|
+|-
+|[[Сырнень тюс]]
+|bgcolor="gold"|
+|-
+|[[Каштанонь тюс]]
+|bgcolor="brown"|
+|-
+|[[Тюжа]]
+|bgcolor="#806000"|
+|-
+|[[Тюжт мери]]
+|bgcolor="#807050"|
+|-
+|[[Ашна-тюжа]]
+|bgcolor="#A08040"|
+|-
+|[[Оливань тюс]]
+|bgcolor="olive"|
+|-
+|[[Пижелды]]
+|bgcolor="#809040"|
+|-
+|[[Валдо-пиже]]
+|bgcolor="lime"|
+|-
+|[[Сэнь-пиже]]
+|bgcolor="aqua"|
+|-
+|[[Сэньшт мери]]
+|bgcolor="#7FFFD4"|
+|-
+|[[Валдо-сэнь]]
+|bgcolor="#40D0E0"|
+|-
+|[[Розань]]
+|bgcolor="#FFD0E0"|
+|-
+|[[Инзеень]]
+|bgcolor="#FF00A0"|
+|-
+|[[Пурпурный цвет]]
+|bgcolor="fuchsia"|
+|-
+|[[Пунцовый цвет]]
+|bgcolor="#FF2080"|
+|-
+|[[Алой (тюс)|Алой]]
+|bgcolor="#DB0500"|
+|-
+|[[Бордувой]]
+|bgcolor="#B00000"|
+|-
+|[[Атямарень]]
+|bgcolor="#640023"|
+|-
+|[[Тюжалды]]
+|bgcolor="#543112"|
+|-
+|[[Оланя]]
+|bgcolor="#FFFFF0"|
+|-
+|[[Пижелдт мери]]
+|bgcolor="#C3B091 "|
+|-
+|[[Валдо-тюжа]])
+|bgcolor="#EBE7D3"|
+|}
+
 [[Категория:Тюст| ]]
 [[Категория:Оптика]]
