--- a/Сырниця_тикше.mw
+++ b/Сырниця_тикше.mw
@@ -44,7 +44,8 @@
 
 ==Чачозо-покшолмазо==
 == Тикшень лемтне ==
-* ({{Lang-lat|Erigeron canadensis L.}}, {{lang-ru| ''Мелколепестник канадский''}})  - '''''кападань сырниця тикше'''''<ref name="Русско-эрзянский ботанический"/>.
+* ({{Lang-lat|Erigeron canadensis L.}}, {{lang-ru| ''Мелколепестник канадский''}})  - '''''[[канадань сырниця тикше]]'''''<ref name="Русско-эрзянский ботанический"/>.
+
 == Содамоёвкст ==
 == Фотокувт==
 <gallery>
