--- a/Вишпиляв.mw
+++ b/Вишпиляв.mw
@@ -48,7 +48,7 @@
 [[File:Pulmonaria officinalis Sturm10.jpg|thumb|250px|left|(''Pulmonaria officinalis'')]]
 
 == Тикшень лемтне ==
-''Pulmonaria'' буень лемесь саеви [[латинэнь кель|латинэнь]] ''pulmo'' — «[[тевеляв]]» (''pulmonalis'' — «тевелявонь») ды секс не тикшетнень видтнэнь саить тевс тевелявонь орматнень эйстэ.<ref name="ЖиР">[Животные и растения. Иллюстрированный энциклопедический словарь М. Эксмо, 2007 г. стр. 830—831, 1248 стр. ISBN 5-699-17445-1]{{ref-ru}}</ref>
+''Pulmonaria'' буень лемесь саеви [[латинэнь кель|латинэнь]] ''pulmo'' — «[[тевеляв]]» (''pulmonalis'' — «тевелявонь») ды секс не тикшетнень видтнэнь саить тевс тевелявонь [[ормат]]нень эйстэ.<ref name="ЖиР">[Животные и растения. Иллюстрированный энциклопедический словарь М. Эксмо, 2007 г. стр. 830—831, 1248 стр. ISBN 5-699-17445-1]{{ref-ru}}</ref>
 
 * ({{Lang-lat|Pulmonaria obscura}}, {{lang-ru| ''Медуница неясная, или темная''}})  - '''''[[чопода вишпиляв]]'''''<ref name="Русско-эрзянский ботанический"/>.
 * ({{Lang-lat|Pulmonaria mollis}}, {{lang-ru| ''Медуница мягкая ''}})  - '''''чевте вишпиляв'''''<ref name="Русско-эрзянский ботанический"/>.
