*Empty MediaWiki Message*

--- a/Вишпиляв.mw
+++ b/Вишпиляв.mw
@@ -40,7 +40,7 @@
 | ipni              = 
 }}
 '''Вишпиляв<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5-7493-0433-7., {{ref-ru}}, {{ref-myv}}</ref>''' ({{lang-la|Pulmonária}}, {{lang-ru|''Медуни́ца<ref name="Губанов И. А">Ударение в словах «медуница» и «pulmonaria» — согласно изданию: Губанов И. А. и др. Определитель высших растений средней полосы европейской части СССР: Пособие для учителей / И. А. Губанов, В. С. Новиков, В. Н. Тихомиров. — М.: Просвещение, 1981. — С. 199, 201—202. — 287 с.{{ref-ru}}</ref>''}}) — ламоиень аволь серэйть [[тикше]]нь касовксонь буе
-[[куяртикшенсетнень раськесь|Куяртикшень]] семиястонть (''Boraginaceae''). 
+[[куяртикшенсетнень раськесь|Куяртикшень]]<ref name="Русско-эрзянский ботанический"/> семиястонть (''Boraginaceae''). 
 
 ==Чачозо-покшолмазо==
 Вишпилявкстнэнь [[цеця]]тнестэ [[мекше|мекштне]] саить парсте медярво<ref name="БСЭ">[http://dic.academic.ru/dic.nsf/bse/107742/Медуница Большая советская энциклопедия. — М.: Советская энциклопедия. 1969—1978. Медуница]{{ref-ru}}</ref>.
