--- a/Чопода_вишпиляв.mw
+++ b/Чопода_вишпиляв.mw
@@ -43,7 +43,7 @@
 
 ==Чачозо-покшолмазо==
 Вишпилявкстнэнь [[цеця]]тнестэ [[мекше|мекштне]] саить парсте медярво<ref name="ИОРЛО">Иллюстрированный определитель растений Ленинградской области Под ред. А. Л. Буданцева и Г. П. Яковлева. М. Товарищество научных изданий КМК, 2006 г. стр. 463, 465. с.799  ISBN 5-87317-260-9 {{ref-ru}}</ref><ref name="Петров">Петров В. В. Мир лесных растений. М. Наука, 1978 г; с. 110—112, стр. 168</ref>.
-Лопанзо — тантей [[ярсамопель]],  эйсэст ламо [[аскорбиновая кислота|аскорбиновой кислота]] ды лия витаминт; тунда теить салат<ref name="ЖиР"/>.
+[[Лопа]]нзо — тантей [[ярсамопель]],  эйсэст ламо [[аскорбиновая кислота|аскорбиновой кислота]] ды лия [[витамин]]т; [[тундо|тунда]] теить салат<ref name="ЖиР"/>.
 
 
 [[File:Pulmonaria_obscura_20090512_020.jpg|thumb|250px|left|Цецязо чопода вишпилявонь]]
