*Empty MediaWiki Message*

--- a/Чопода_вишпиляв.mw
+++ b/Чопода_вишпиляв.mw
@@ -49,7 +49,7 @@
 [[File:Pulmonaria_obscura_20090512_020.jpg|thumb|250px|left|Цецязо чопода вишпилявонь]]
 
 == Тикшень лемтне ==
-''Pulmonaria'' буень лемесь саеви [[латинэнь кель|латинэнь]] ''pulmo'' — «[[тевеляв]]» (''pulmonalis'' — «тевелявонь») ды секс не тикшетнень видтнэнь саить тевс тевелявонь [[ормат]]нень эйстэ.<ref name="ЖиР">[Животные и растения. Иллюстрированный энциклопедический словарь М. Эксмо, 2007 г. стр. 830—831, 1248 стр. ISBN 5-699-17445-1]{{ref-ru}}</ref>
+''Pulmonaria'' буень лемесь саеви [[латинэнь кель|латинэнь]] ''pulmo'' — «[[тевеляв]]» (''pulmonalis'' — «тевелявонь») ды секс не тикшетнень видтнэнь саить тевс тевелявонь [[ормат]]нень эйстэ.<ref name="ЖиР">Животные и растения. Иллюстрированный энциклопедический словарь М. Эксмо, 2007 г. стр. 830—831, 1248 стр. ISBN 5-699-17445-1{{ref-ru}}</ref>
 
 * ({{Lang-lat|Pulmonária}}, {{lang-ru| ''Медуница''}})  - '''''[[вишпиляв]]'''''<ref name="Русско-эрзянский ботанический"/>.
 * ({{Lang-lat|Pulmonaria mollis}}, {{lang-ru| ''Медуница мягкая ''}})  - '''''чевте вишпиляв'''''<ref name="Русско-эрзянский ботанический"/>.
