--- a/Марть.mw
+++ b/Марть.mw
@@ -6,9 +6,9 @@
 I. Коське марть:
 : 1. Парьгиненькондят — ламо видьме марто:
 :* сонсь [[Парьгине]] ([[мако]], [[тюльпан]], [[дурман]] {{lang-la|Datúra}});
-:* [[Бобкат]] ( {{lang-la|Fabáceae}}, эли Fabaceae s.l., эли Leguminósae, эли Papilionaceae семиясь]]);
-:* [[Килькш]] (Капстань семиясь  {{lang-la|Brassicáceae}});
-:* лопанькондямо ({{lang-la|follículus}}).
+:* [[Бобкат]] ( {{lang-la|Fabáceae}}, эли ''Fabaceae s.l.'', эли ''Leguminósae'', эли ''Papilionaceae семиясь'');
+:* [[Килькш]] (Капстань семиясь  {{lang-la|''Brassicáceae''}});
+:* лопанькондямо ({{lang-la|''follículus''}}).
 : 2. ''Пештенькондят эли вейкевидьметь''
 :* [[Пеште]], [[Пештине]] ([[Пештекс]], [[фундук]]);
 :* [[Сюрот (тикшеть)|cюрот]] 
