*Empty MediaWiki Message*

--- a/Абажа_лопа.mw
+++ b/Абажа_лопа.mw
@@ -1,15 +1,73 @@
-[[Артовкс:Coltsfoot.jpg|thumb|350px|right|border|Абажа лопа тикшесь цецямсто]]
-'''Абажа лопа (Одажа лопа)''' (лат. ''Tussilago farfara'') — ламо иень перть касыця [[тикше]], Ламоцецянь семиянь. 
+{{Таксономиясь
+|name =Абажа лопа
+|latin =Tussilago
+|image file =Coltsfoot.jpg
+|image descr =Абажа лопа тикшесь цецямсто
+|superregnum =
+|subregnum = 
+|раздел =
+|superphylum =
+|phylum = 
+|subphylum =
+|superdivisio =
+|divisio =
+|subdivisio = 
+|superclassis =
+|classis = 
+|subclassis =
+|infraclassis =
+|superordo =
+|ordo = 
+|subordo =
+|infraordo =
+|superfamilia =
+|familia = 
+|subfamilia =
+|tribus =
+|genus =
+|subgenus =
+|species =
+|subspecies =
+|unranked =
+|range map =
+| wikispecies       =Tussilago
+| commons           =Category:Tussilago
+| iucn              = 
+| itis              = 
+| ncbi              = 
+| eol               = 
+| grin             = 
+| ipni              = 
+}}
+'''Абажа лопа<ref name="Бузакова">Р.Н. Бузакова, Тикшень валкс - Саранск: Мордовской кн. изд-ась, 1996. - 144.с. ISBN 5-7595-0963-2{{ref-ru}}, {{ref-myv}}</ref>''' (лиякс: '''Одажа лопа<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5-7493-0433-7., {{ref-ru}}, {{ref-myv}}</ref>''') (лат. ''Tussilago farfara'', {{lang-ru| ''Ма́ть-и-ма́чеха''}}) — ламо иень перть касыця [[тикше]], Ламоцецянь семиянь (''Asteraceae''). 
 
-Рана [[тундо|тунда]] лисисть [[ашо|ашола]] нетькскеть, конатнень прясост [[ожо]] цецинеть. Цецямодо мейле теке ундоксонть эйстэ кармить касомо валоня келей пиже лопат, алксост ашот, вельтязь чевте понынесэ. Касы сёвонев модасо, лей чирева, латкова, пандо чамава. Ловови ормадо лезэв тикшекс. 
+== Чачозо-покшолмазо ==
+[[File:Köhler's Medizinal-Pflanzen in naturgetreuen Abbildungen mit kurz erläuterndem Texte (Plate 6) (6972230546).jpg|thumb|250px|left|Одажа лопа (ботаникань артовкс)]]
+Рана [[тундо|тунда]] лисисть [[ашо|ашола]] нетькскеть, конатнень прясост [[ожо]] цецинеть. Цецямодо мейле теке ундоксонть эйстэ кармить касомо валоня келей [[пиже]] лопат, алксост [[ашо]]т, вельтязь чевте понынесэ. Касы [[сёвонь|сёвонев]] [[мода]]со, [[лей]] чирева, [[латко]]ва, [[пандо]] чамава. 
+==Ормадо лезэв==
+Ловови [[ормат|ормадо]] лезэв тикшекс, пурныть лопанзо тунда, костить кошсо эли пекстазь [[чи]]стэ таркасо 40—50 °С температура марто<ref name="БФС">[http://herba.msu.ru/shipunov/school/books/botaniko-farmakognost_slovar1990.djvu Блинова К. Ф. и др. Ботанико-фармакогностический словарь : Справ. пособие. Под ред. К. Ф. Блиновой, Г. П. Яковлева. М. Высш. шк. 1990. стр.210 ISBN 5-06-000085-0]{{ref-ru}}</ref>.     
 
-Лопатнестэ ды цецятнестэ теить ламбамо ведь, симить тевелявонь экшендемстэ, шождалгавты козомонть. Цецятнестэ мекштне саить медярво. 
+Лопатнестэ ды цецятнестэ теить ламбамо ведь, симить тевелявонь экшендемстэ, шождалгавты козомонть<ref name="Каден">Каден Н. Н., Терентьева Н. Н. Этимологический словарь латинских названий растений, встречающихся в окрестностях агробиостанции МГУ «Чашниково» / Под ред. В. И. Мирошенковой. — М.: Изд-во МГУ, 1975. — С. 66, 158. — 204 с. — 2050 экз. {{ref-myv}}</ref>. [[Цеця]]тнестэ [[мекшт]]не саить [[медярво]]<ref>[http://ashipunov.info/shipunov/school/books/slovarj-sprav_pchelovoda_1955.djvu Абрикосов Х. Н. Мать-и-мачеха. Словарь-справочник пчеловода. ответственный сост. Федосов Н. Ф. Москва, Сельхозгиз, 1955. стр. 185 ]{{ref-ru}}</ref>. 
 
 == Тикшень лемтне ==
-[[Ицял буе|Ицял буень]] Полдаська велесэ тензе мерить ''абажа лопа''. [[Покш Килейбуе|Покш Килейбуень]] Ало велесэ (Чёрная Промзасо) мерить ''ватракш лопа''. [[Кочкурбуе|Кочкурбуень]] Давыд велесэ мерить ''горниповонь цецяка'', Сурвелесэ — ''од авань чама лопа''. [[Ульянонь ёнкс|Ульянонь ёнксонь]] [[Николаень буе|Николаень буень]] Мордовский Канадей велесэ мерить ''лей тикше'', Губашево велесэ цецятнеде мерить ''озяз ловсо''.
+Наукань (латинэнь) буень лемесь {{lang-la|tussilago, inis}} саеви {{lang-la|tussis,  is}} («козома») ды {{lang-la|ago, egi, actum, ere}} («панемс») валтнестэ — «шождалгавты козомонть»<ref name="Каден" />.
 
-== Сёрм.: ==
-* Р.Н. Бузакова, Тикшень валкс - Саранск: Мордовской кн. изд-ась, 1996. - 144.с. ISBN 5-7595-0963-2 
+* [[Ицял буе|Ицял буень]] Полдаська велесэ тензе мерить ''абажа лопа''. 
+* [[Покш Килейбуе|Покш Килейбуень]] Ало велесэ (Чёрная Промзасо) мерить ''ватракш лопа''. 
+* [[Кочкурбуе|Кочкурбуень]] Давыд велесэ мерить ''горниповонь цецяка'', Сурвелесэ — ''од авань чама лопа''. 
+* [[Ульянонь ёнкс|Ульянонь ёнксонь]] [[Николаень буе|Николаень буень]] Мордовский Канадей велесэ мерить ''лей тикше'', Губашево велесэ цецятнеде мерить ''озяз ловсо''.
+
+== Фотокувт== 
+<gallery>
+Image:Tussilago farfara20100409 57.jpg| цецятьнэ эзть панжово
+Image:Tussilago farfara20100409 07.jpg|цецясь панжовсь
+Image:Tussilago-farfara 0018 a.jpg|Эмежесь (вейкевидьме)
+Image:Planta prundul dambovitei.jpg|цецямодо мейле
+</gallery>
+
+== Содамоёвкст ==
+==  Лисьмапря ==
+<references />
 
 {{stub}}
 
