*Empty MediaWiki Message*

--- a/Абажа_лопа.mw
+++ b/Абажа_лопа.mw
@@ -39,7 +39,7 @@
 | grin             = 
 | ipni              = 
 }}
-'''Абажа лопа<ref name="Бузакова">Р.Н. Бузакова, Тикшень валкс - Саранск: Мордовской кн. изд-ась, 1996. - 144.с. ISBN 5-7595-0963-2{{ref-ru}}, {{ref-myv}}</ref>''' (лиякс: '''Одажа лопа<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5-7493-0433-7., {{ref-ru}}, {{ref-myv}}</ref>''') (лат. ''Tussilago farfara'', {{lang-ru| ''Ма́ть-и-ма́чеха''}}) — ламо иень перть касыця [[тикше]], Ламоцецянь семиянь (''Asteraceae''). 
+'''Абажа лопа<ref name="Бузакова">Р.Н. Бузакова, Тикшень валкс - Саранск: Мордовской кн. изд-ась, 1996. - 144.с. ISBN 5-7595-0963-2{{ref-ru}}, {{ref-myv}}</ref>''', лиякс: '''Одажа лопа<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5-7493-0433-7., {{ref-ru}}, {{ref-myv}}</ref>''', (лат. ''Tussilago farfara'', {{lang-ru| ''Ма́ть-и-ма́чеха''}}) — ламо иень перть касыця [[тикше]], Ламоцецянь семиянь (''Asteraceae''). 
 
 == Чачозо-покшолмазо ==
 [[File:Köhler's Medizinal-Pflanzen in naturgetreuen Abbildungen mit kurz erläuterndem Texte (Plate 6) (6972230546).jpg|thumb|250px|left|Одажа лопа (ботаникань артовкс)]]
