*Empty MediaWiki Message*

--- a/Абажа_лопа.mw
+++ b/Абажа_лопа.mw
@@ -70,7 +70,7 @@ Image:Planta prundul dambovitei.jpg|цецямодо мейле
 <references />
 
 {{stub}}
-
+[[Категория:Биология|А]]
 [[Категория:Тикшеть|А]]
 [[Категория:Ормадо лезэвть|А]]
 [[Категория:Медярво максыйть|А]]
