*Empty MediaWiki Message*

--- a/Дарькат-марькат.mw
+++ b/Дарькат-марькат.mw
@@ -44,7 +44,7 @@
 == Чачозо-покшолмазо ==
 [[File:Illustration Melampyrum pratense0.jpg|thumb|250px|left|Дарькат-марькат (ботаникань артовкс)]]
 
-Вейкеиень, пельс [[паксянь тикше]]. Ундоксонзо лавшот, аволь домкасто аштицят, ансяк эйсэст улить ундоксонь потицят, сынст эйсэ дарькат-марькат лия касовкстэстэ потить веденть ды ярсамо веществатнень. 
+Вейкеиень, пельс [[паксянь тикше]]. Ундоксонзо лавшот, аволь домкасто аштицят, ансяк эйсэст улить ундоксонь потицят, сынст эйсэ дарькат-марькат лия касовкстнэстэ потить веденть ды ярсамо веществатнень. 
 [[Нетькс]]энзэ видеть, аламодо [[тарад]]ов. Лопанзо [[пижэ]]ть, видстэ ды [[ал]]оньёнов молицят, пштипевть. 
 
 Вастневи [[Европань Мастор|Европасо]], [[Азия Мастор|Азиясо]] ды [[Пелевеёнкс Америкасо]]. Сехте содавиксэв [[Россия|Россиясо]] — [[тумовирень  дарькат-марькат]] -  (''Melampyrum nemorosum'').
