*Empty MediaWiki Message*

--- a/Евсевьев,_Макар_Евсевьевич.mw
+++ b/Евсевьев,_Макар_Евсевьевич.mw
@@ -28,7 +28,7 @@
 
 Макар Евсеевич чачсь [[1864]] иень [[якшамковонь 18 чи]]  (30) чистэ, [[Цярмун (Ветькень Республика)|Цярмун]] велесэ (рузокс Малые Кармалы),  неень Ибресинбуень [[Ветькень Республикась|Ветькень Масторс]]о сокиця-видицянь семиясо. 
 
-[[File:Bust Makar Evsevjev.JPG|thumb|350px|left|Макар Евсевьевэнь кеврунгозо, [[Саран ош]]со]]
+[[File:Bust Makar Evsevjev.JPG|thumb|350px|left|Макар Евсевьевэнь кеврунгозо [[Мордовиянь государственной педагогической институт М. Е. Евсевьевэнь лемсэ]], [[Саран ош]]со]]
 Эсь эрямонь малав ведьгемень иетнень Макар Евсевьев алтынзе фольклоронь пурнамонь пек эрявикс тевентень ды тень пингстэ сехте покш мель явась свадьбантень.Те домка мелесь Чачсь Евсевьевень превс-седейс, нать, сестэ, зярдо сон прядызеть Казанень инородческой семинариянть - 1883-це иестэ, ды седе тов ушодызе фольклоронь пурнамонть. Эрзянь свадьбась неявсь сонензэ прок покш коекс, конасонть кеместэ сюлмавовсь эрзянь раськенть историянзо, эрямонзо ды культуразо.
 Кода сёрмадыль сонсь М.Е. Евсевьев:   
 {{Цитатань ушодома}}
