*Empty MediaWiki Message*

--- a/Евсевьев,_Макар_Евсевьевич.mw
+++ b/Евсевьев,_Макар_Евсевьевич.mw
@@ -39,9 +39,18 @@
 Кулось Макар Евсеевич [[1931]] иень [[панжиковонь 10 чи]]стэ, калмазель [[Казань ош]]со. 
 140-иень М.Е. Евсевьевень чачома чистензэ челькезе ульнесь калмазь [[Саранск]]ойсэ.
 
-== Сёрм. ==
+== Фотокувт== 
+<gallery>
+Image:Первоначальный учебник русского языка для мордвы-эрзи (М. Е. Евсевьев, 1897).djvu| Рузонь келень тонавтома эрзянь ломаненень. Анокстыцязо Макар Евсевьев, нолдазь [[1892 ие]]стэ Казанонь Православиянь Миссионерэнь Вейсэндявксонть. 2-це нолдавкс.
+Image:Букварь для мордвы-мокши (М. Е. Евсевьев, 1897).djvu|Мокшонь букварь.Анокстыцязо Макар Евсевьев, нолдазь [[1892 ие]]стэ Казанонь Православиянь Миссионерэнь Вейсэндявксонть. 2-це нолдавкс.
+Image:Эрзянь ёвкст (М. Е. Евсевьев, 1928).djvu|Эрзянь ёвкст. Пурныньде ды нолдыньде Макар Евсевьев [[1928 ие]]стэ.
+</gallery>
+
+==  Лисьмапря ==
 <references />
 
+
+{{stub}}
 
 [[Category:Эрзянь Ине ломанть|Е]]
 [[Category:Эрзякс кортыцят|Е]]
