*Empty MediaWiki Message*

--- a/Журавлёвонь,_Числав_Григорьевич.mw
+++ b/Журавлёвонь,_Числав_Григорьевич.mw
@@ -2,7 +2,7 @@
  |лем                  = Числав Журавлёв
  |оригинальной лем      = 
  |чачома лем         = Журавлёв Вячеслав Григорьевич
- |артовкс              = Журавлев.jpg
+ |артовкс              = 
  |артовксонть покшолмазо   = 
  |артовксонть эйсте = 
  |важодема ёрокчизе     = валморозей, сёрмадей
