*Empty MediaWiki Message*

--- a/Абрамов,_Кузьма_Григорьевич.mw
+++ b/Абрамов,_Кузьма_Григорьевич.mw
@@ -8,7 +8,7 @@
  |артовксонть эйсте = Кузьма Абрамов озадо сёрмадовксонзо вакссо. 
  |важодема ёрокчизе     = [[Эрзянь кель|эрзянь]] ды [[рузонь кель|рузонь]] кельтнесэ сёрмадей
  |чачома чись          = 12.11.1914
- |чачома тарка         = {{ЧачомаТарка|Эрзянь Найман веле}}, {{ЧачомаТарка|Покш Килейбуе}}, {{ЧачомаТарка|Мордовия Республикась|Мордовиянь}}
+ |чачома тарка         = {{ЧачомаТарка|Эрзянь Найман веле|Ташто Найман веле (Покш Килейбуе)}}, {{ЧачомаТарка|Покш Килейбуе}}, {{ЧачомаТарка|Мордовия Республикась|Мордовиянь}}
  |гражданчи            = {{Масторкоцт|Россиянь Империя}}<br /> {{Масторкоцт|СССР}} <br /> {{Масторкоцт|Россия}}
  |кедьалксчи           = 
  |кулома чись          = 04.08.2008
@@ -23,7 +23,7 @@
  |вальма                = 
  |википурнавкс         = 
 }}
-'''Абрамов Кузьма Григорьевич''' ([[1914 ие]]нь [[сундерьковонь 12 чи]]стэ Эрзянь [[Найман веле|Найман велесэ]] [[Покш Килейбуе|Покш Килейбуесэ]] - [[2008 ие]]нь [[умарьковонь 4 чи]]стэ) — [[Эрзя|эрзянь]] сёрмадей. 
+'''Абрамов Кузьма Григорьевич''' ([[1914 ие]]нь [[сундерьковонь 12 чи]]стэ Эрзянь [[Ташто Найман веле (Покш Килейбуе)|Найман велесэ]] [[Покш Килейбуе|Покш Килейбуесэ]] - [[2008 ие]]нь [[умарьковонь 4 чи]]стэ) — [[Эрзя|эрзянь]] сёрмадей. 
 
 Седе пек содавикс кода ёвтнемань, повестень, романонь ды драмань сёрмадыця. Ды, паряк, пек аламот содыть: литературас васенце эскельксэнзэ сон теинзе стихень сёрмадоманть вельде. Лисезь васенце книгазояк — стихотворетянь пусмо («Стихть», [[1940]]). Седе тов сти­хень сёрмадомань ёрокчись маштовсь тензэ рузонь ды мирэнь-масторонь классиканть, Россиянь ламо нациянь литературань сехте пара невтевкстнэнь эрзянь кельс ютавтомсто.
 
@@ -291,6 +291,9 @@
 
 Рузонь кельс сонетатнэнь ютавтынде С.Маршак
 
+
+==  Лисьмапря ==
+<references />
 
 [[Category:Ломанть|А]]
 [[Category:Эрзянь кель|А]]
