*Empty MediaWiki Message*

--- a/Абрамов,_Кузьма_Григорьевич.mw
+++ b/Абрамов,_Кузьма_Григорьевич.mw
@@ -3,9 +3,9 @@
  |лем                  = Кузьма Абрамов  
  |оригинальной лем      = 
  |чачома лем         = Кузьма Григорьевич Абрамов 
- |артовкс              = Abramovonj K.G.jpg
+ |артовкс              = 
  |артовксонть покшолмазо   = 
- |артовксонть эйсте = Кузьма Абрамов озадо сёрмадовксонзо вакссо. 
+ |артовксонть эйсте = 
  |важодема ёрокчизе     = [[Эрзянь кель|эрзянь]] ды [[рузонь кель|рузонь]] кельтнесэ сёрмадей
  |чачома чись          = 12.11.1914
  |чачома тарка         = {{ЧачомаТарка|Эрзянь Найман веле|Ташто Найман веле (Покш Килейбуе)}}, {{ЧачомаТарка|Покш Килейбуе}}, {{ЧачомаТарка|Мордовия Республикась|Мордовиянь}}
