--- a/Абрамов,_Кузьма_Григорьевич.mw
+++ b/Абрамов,_Кузьма_Григорьевич.mw
@@ -23,7 +23,7 @@
  |вальма                = 
  |википурнавкс         = 
 }}
-'''Абрамов Кузьма Григорьевич''' ([[1914 ие]]нь [[сундерьковонь 12 чи]]стэ Эрзянь [[Ташто Найман веле (Покш Килейбуе)|Найман велесэ]] [[Покш Килейбуе|Покш Килейбуесэ]] - [[2008 ие]]нь [[умарьковонь 4 чи]]стэ) — [[Эрзя|эрзянь]] сёрмадей. 
+'''Абрамов Кузьма Григорьевич''' ([[1914 ие]]нь [[сундерьковонь 12 чи]]стэ Эрзянь [[Ташто Найман веле (Покш Килейбуе)|Найман велесэ]] [[Покш Килейбуе|Покш Килейбуесэ]] - [[2008 ие]]нь [[умарьковонь 4 чи]]стэ) — [[Эрзя|эрзянь]] сёрмадей<ref name="Чилисема">[http://chilisema.ru/upload/iblock/81c/чилисема%2011-15-ilovepdf-compressed%20(1).pdf «Чилисема», №11, 2015 ТИРИНЬ КЕЛЕСЬ ДЫ ЛИТЕРАТУРАСЬ МОНЬ ЭРЯМОСО]{{ref-myv}}</ref>. 
 
 Седе пек содавикс кода ёвтнемань, повестень, романонь ды драмань сёрмадыця. Ды, паряк, пек аламот содыть: литературас васенце эскельксэнзэ сон теинзе стихень сёрмадоманть вельде. Лисезь васенце книгазояк — стихотворетянь пусмо («Стихть», [[1940]]). Седе тов сти­хень сёрмадомань ёрокчись маштовсь тензэ рузонь ды мирэнь-масторонь классиканть, Россиянь ламо нациянь литературань сехте пара невтевкстнэнь эрзянь кельс ютавтомсто.
 
