--- a/Люлякинань,_Серафима_Марковна.mw
+++ b/Люлякинань,_Серафима_Марковна.mw
@@ -22,7 +22,7 @@
  |вальма                = 
  |википурнавкс         = 
 }}
-'''Люлякинань, Серафима Марковна''' ([[1922 ие]]нь [[медьковонь 29 чи]]стэ [[Самарань ёнкс|Самарань ёнксонь]] Похвистневань буень [[Ягодное веле]]сэ - [[1993 ие]]нь [[якшамковонь 17 чи]]стэ Похвистневань буень Ягодное велесэ) — [[Эрзя|эрзянь]] моронь ладсиця, сёрмадей.
+'''Люлякинань, Серафима Марковна''' ([[1922 ие]]нь [[медьковонь 29 чи]]стэ [[Самарань ёнкс|Самарань ёнксонь]] Похвистневань буень [[Ягодное веле]]сэ - [[1993 ие]]нь [[якшамковонь 17 чи]]стэ Похвистневань буень Ягодное велесэ) — [[Эрзя|эрзянь]] моронь ладсиця, сёрмадей<ref name="Чилисема">[http://chilisema.ru/upload/iblock/81c/чилисема%2011-15-ilovepdf-compressed%20(1).pdf  «Чилисема», №11, 2015 ТИРИНЬ КЕЛЕСЬ ДЫ ЛИТЕРАТУРАСЬ МОНЬ ЭРЯМОСО]{{ref-myv}}</ref>.
 
 == Эстедензэ ==
 Чачсь эрзянь сокиця-видиця семиясо. Прядызе Подбельскоень ушодксонь тонавтнема тарканть, важодсь вельхозсо, кастась сисем эйкакшт. Тонавтнема шкасто уш морсесь художественной самодеятельностьсэ, варчнесь морамонь ёрокчинзэ буень, ёнксонь олимпиадатнесэ, ванмотнесэ. Сеедьстэ морсесь эсензэ морот. Морамо ды моронь складямо Серафима Люлякина ушодсть одпорасто. Сонзэ ванькс вайгелесь, моротнень гайтест, ладост пштистэ марямось редявсь весень ютксто, ды од тейтересь бойкасто, шождасто тонавтнинзе велень эрицятнень морост. Фольклоронь моротьнень Серафима бажась морамо эсь койсэ-лацо. Тенень сон васняяк тонадсь семиясонзо, косо веси пек вечксть раськень моротнень ды ёвкснень. Ялатеке сехте малавикс тонавтыцякс Серафима марковна ловсь эсинзе покшаванзо, Анисия Ефимовнань, кона эрясь сядо вете иеть, ды конань содылизь морамонь коряс Самарань губерниянть-ёнксонь келес. Нуцьканзо сон тонавть моронь складямо ды тиринь [[эрзянь кель|эрзянь келенть]] мазычинзэ марямо. 
@@ -67,7 +67,7 @@
 * [http://www.lib.e-mordovia.ru/Library/data/LiyleakinaSerafimaMarkovna/001.rtf Иля пува, варма (ловнома)]{{ref-myv}}
 * [http://nudej.livejournal.com/tag/Люлякина%20Серафима  Моры С. Люлякина (кунсолома)]{{ref-myv}}
 
-== Сёрм. ==
+==  Лисьмапря ==
 <references />
 
 [[Категория:Эрзянь валморонь ладсийть|Л]]
