--- a/Коломасов,_Василий_Максимович.mw
+++ b/Коломасов,_Василий_Максимович.mw
@@ -23,12 +23,14 @@
  |вальма                = 
  |википурнавкс         = 
 }}
-'''Коломасов, Василий Максимович''' ([[1909 ие]]нь [[умарьковонь 14 чи]]стэ Эрзянь [[Ташто Найман веле (Покш Килейбуе)|Найман велесэ]] [[Покш Килейбуе|Покш Килейбуесэ]] - [[1987 ие]]нь [[эйзюрковонь 6 чи]]стэ) — [[Эрзя|эрзянь]] сёрмадей, валморозей, драматург, ютавтыця. СССР-нь Сёрмадеень Кужос совиця (1938).
+'''Коломасов, Василий Максимович''' ([[1909 ие]]нь [[умарьковонь 14 чи]]стэ Эрзянь [[Ташто Найман веле (Покш Килейбуе)|Найман велесэ]] [[Покш Килейбуе|Покш Килейбуесэ]] - [[1987 ие]]нь [[эйзюрковонь 6 чи]]стэ) — [[Эрзя|эрзянь]] сёрмадей<ref name="Чилисема">[http://chilisema.ru/upload/iblock/81c/чилисема%2011-15-ilovepdf-compressed%20(1).pdf  «Чилисема», №11, 2015 ТИРИНЬ КЕЛЕСЬ ДЫ ЛИТЕРАТУРАСЬ МОНЬ ЭРЯМОСО]{{ref-myv}}</ref>, валморозей, драматург<ref>Театральная энциклопедия. Том 3. Глав. ред. П. А. Марков - М.: Советская энциклопедия, 1964. - 1086 стб. с илл., 7 л. илл.{{ref-ru}}</ref>, ютавтыця. СССР-нь Сёрмадеень Кужос совиця (1938).
 
 == Эстедензэ ==
-Василий Максимович Коломасов чачсь [[1909 ие]]нь [[умарьковонь 14 чи]]стэ Эрзянь [[Ташто Найман веле (Покш Килейбуе)|Найман велесэ]]. Эйкакш порасто кундась тонавтнеме велень артельсэнть [[чувтт|чувт]]осто строямонь, витемань-петемань тевтнес. Ды сон, весе тень парсте содазь, туекшнесь масторонь од стройкатнес важодеме. Сисем иень перть ютынзе Уралонь, Сибирень ды масторонь якшамо таркатнень. [[1933 ие]]стэ велявтсь тиринь велев ды сеске кучозель тонавтнеме партийной школав.Тонавтнемадо мейле важодсь [[Сятко (журнал-ковставкс)|«Сятко» ковставксо-журналсо]], «Эрзянь коммуна» газетасонть ды редакторокс книгань издательствасо. Шкань апак таргсе кундась «Лавгинов» романонть сёрмадомо, конань прядызе [[1940 ие]]стэнть. 1941-1943 иетнестэ тюрсь фашисттнэнь каршо. Кода ойнань ветеран, Василий Максимович казезь Якстере Знамянь орденсэ ды зярыя медальсэ. Романось книгань издательствасо нолдазель войнадо икелень иестэнть. Омбоцеде лиссь [[1956 ие]]стэ. 
+Василий Максимович Коломасов чачсь [[1909 ие]]нь [[умарьковонь 14 чи]]стэ Эрзянь [[Ташто Найман веле (Покш Килейбуе)|Найман велесэ]]. Эйкакш порасто кундась тонавтнеме велень артельсэнть [[чувтт|чувт]]осто строямонь, витемань-петемань тевтнес. Ды сон, весе тень парсте содазь, туекшнесь масторонь од стройкатнес важодеме. Сисем иень перть ютынзе Уралонь, Сибирень ды масторонь якшамо таркатнень. [[1933 ие]]стэ велявтсь тиринь велев ды сеске кучозель тонавтнеме партийной школав.Тонавтнемадо мейле важодсь [[Сятко (журнал-ковставкс)|«Сятко» ковставксо-журналсо]], «Эрзянь коммуна» газетасонть ды редакторокс книгань издательствасо. Сёрмадомо ушодсь [[1931 ие]]стэ<ref>[http://dic.academic.ru/dic.nsf/bse/96962/Коломасов Большая советская энциклопедия. — М.: Советская энциклопедия. 1969—1978 Коломасов В.М.]{{ref-ru}}</ref>. Шкань апак таргсе кундась «Лавгинов» романонть сёрмадомо, конань прядызе [[1940 ие]]стэнть. 1941-1943 иетнестэ тюрсь фашисттнэнь каршо. Кода ойнань ветеран, Василий Максимович казезь Якстере Знамянь орденсэ ды зярыя медальсэ. 
+Л. Елисеев сёрмадеесь  «Лавгинов»  романанть ютавтызеть рузонь кельс (1959).  Романось книгань издательствасо нолдазель войнадо икелень иестэнть. Омбоцеде лиссь [[1956 ие]]стэ. [[1962 ие]]стэ «Лавгинов» ульнесь невтезь телевидениясо<ref name="Библиотека Мо">[http://www.lib.e-mordovia.ru/Library/?Char=%CA&id=13 Библиотека Мордовской Литературы: Коломасов Василий Максимович]{{ref-ru}}</ref>. 
 
 == Сёрмадовксонзо ==
+*«Иля авардть»<ref name="ГБУ РК"/> ([[1931]]).
 * «Яхим Лавгинов» ([[1936]])
 * «Прокопыч» ([[1940]])
 * «Норовава» ([[1945]], [[1946 ие]]стэ ульнесь путозь Мордовиянь драматической театрань сцена лангсо)
@@ -37,7 +39,7 @@
 * «Кавто церынеть» ([[1957]])
 * «Телень ки» ([[1984]]) 
 
-Содави кода ютавтыця эрзянь кельс болгаронь сёрмадеень шкинемаст, Н. В. Гоголень «Ревизор» пеедекшеманть,  Г. Гейнень валморонзо, М. Шолоховонь «Судьба человека» ёвтнеманть ды лия.
+Содави кода ютавтыця эрзянь кельс<ref name="Деловой Саранск">[https://afisha.delovoy-saransk.ru/show/vystavka-v-pamjat-o-mordovskom-pisatele-v-m-kolomasove-3372.html Деловой Саранск. Выставка в память о мордовском писателе В. М. Коломасове]{{ref-ru}}</ref> болгаронь сёрмадеень шкинемаст (А. Ценева ({{lang-ru|«По пути домой»}}, 1966), З. Дафинова ({{lang-ru|«Тошо и Жанна»}}, 1966)), Н. В. Гоголень «Ревизор» пеедекшеманть,  Г. Гейнень валморонзо, М. Шолоховонь «Судьба человека» ёвтнеманть ды лия<ref name="ГБУ РК">[http://www.nbrkomi.ru/page/4101 ГБУ РК "Национальная библиотека Республики Коми" Коломасов Василий Максимович ]{{ref-ru}}</ref>.
 
 ==  Лисьмапря ==
 <references />
