*Empty MediaWiki Message*

--- a/Абрамов,_Кузьма_Григорьевич.mw
+++ b/Абрамов,_Кузьма_Григорьевич.mw
@@ -23,12 +23,24 @@
  |вальма                = 
  |википурнавкс         = 
 }}
-'''Абрамов Кузьма Григорьевич''' ([[1914 ие]]нь [[сундерьковонь 12 чи]]стэ Эрзянь [[Ташто Найман веле (Покш Килейбуе)|Найман велесэ]] [[Покш Килейбуе|Покш Килейбуесэ]] - [[2008 ие]]нь [[умарьковонь 4 чи]]стэ) — [[Эрзя|эрзянь]] сёрмадей<ref name="Чилисема">[http://chilisema.ru/upload/iblock/81c/чилисема%2011-15-ilovepdf-compressed%20(1).pdf «Чилисема», №11, 2015 ТИРИНЬ КЕЛЕСЬ ДЫ ЛИТЕРАТУРАСЬ МОНЬ ЭРЯМОСО]{{ref-myv}}</ref>. 
+'''Абрамов Кузьма Григорьевич''' ([[1914 ие]]нь [[сундерьковонь 12 чи]]стэ эрзянь<ref name="«Тиринь ёнксонь валдо»">«Тиринь ёнксонь валдо» : ледстнемань чокшне, конась алтави К. Г. Абрамовонь 100 иень топодемантень / Мордовия Республикань культурань ды туризмань ми- нистерствась, Мордовия Республикань А. С. Пушкинэнь лемсэ Национальной библиотекась, Краеведческой, национальной ды финно-угорской литературань отделэсь ; [пурныцясь В. Б. Бояркина ; витницясь Н. В. Бочканова]. – Саранск, 2014. – 25 с. – Эрзя яз.{{ref-myv}} </ref>[[Ташто Найман веле (Покш Килейбуе)|Ташто Найман велесэ]] [[Покш Килейбуе|Покш Килейбуесэ]] - [[2008 ие]]нь [[умарьковонь 4 чи]]стэ<ref name="ИА REGNUM" />) — [[Эрзя|эрзянь]] сёрмадей<ref name="Чилисема">[http://chilisema.ru/upload/iblock/81c/чилисема%2011-15-ilovepdf-compressed%20(1).pdf «Чилисема», №11, 2015 ТИРИНЬ КЕЛЕСЬ ДЫ ЛИТЕРАТУРАСЬ МОНЬ ЭРЯМОСО]{{ref-myv}}</ref>. 
 
 Седе пек содавикс кода ёвтнемань, повестень, романонь ды драмань сёрмадыця. Ды, паряк, пек аламот содыть: литературас васенце эскельксэнзэ сон теинзе стихень сёрмадоманть вельде. Лисезь васенце книгазояк — стихотворетянь пусмо («Стихть», [[1940]]). Седе тов сти­хень сёрмадомань ёрокчись маштовсь тензэ рузонь ды мирэнь-масторонь классиканть, Россиянь ламо нациянь литературань сехте пара невтевкстнэнь эрзянь кельс ютавтомсто.
 
 == Эстедензэ ==
+Школань прядомонзо мельга,  1931 – 1933 ии. важодсь велесэ. 1933 – 1934 ии. тонавтсь Мордовиянь педагогической институтсо. Мейле важодсь тонавтыцякс [[Госагыр веле (Покш Килейбуе)|Госагырэнь]] сисемиень школасо. Ойнась ушодовсь сестэ, коли Кузьма Абрамов ульнесь Тамбовонь военно-пехотной училищань курсантокс, тосто сеске саизь служамо фронтс. Московонть кисэ туремасо ульнесь ранязь.
 
+Ойнаданть мейле важодсь редакторокс Радиокомитетсэ, ульнесь театрань литературань пельксэнть тевветицякс. Ойнадо икеле Мордовиянь кулялопатнесэ лиснесть сонзэ валморонзо. Лисить башка нолдавкссо сёрмадовксонзо: «Рассказы» ([[1959]]), «Русые косы» (1961), «Сырнень зорюват» (1961), «Ратор лейга» (1962), «Комолявка» (1962), «Новоселье» (1963), пьесазо «Эрьванть эсензэ ормазо» ([[1968]]). 
+
+К. Г. Абрамовонь шкинемань виевчизэ парсте невти «Найман» (1957), «Ломантне теевсть малацекс» ([[1961]]), «Качамонь пачк» ([[1964]]) трилогиясь. Омбоце трилогиясь – «Эрзянь цёра» (1971, 1973, 1974) – весе мирэнть келес содавикс эрзянь Инекерсицядонть ды артыцядонть, чувтосто керсицядонть [[Степан Эрьзя|Степан Эрьзядо]]. 1977 иестэ сонзэ кис Кузьма Григорьевичне макст Мордовиянь  АССР-нь Прявт Казне<ref name="ИА REGNUM">[https://regnum.ru/news/1036481.html ИА REGNUM В Мордовии скончался писатель Кузьма Абрамов]{{ref-ru}}</ref>.
+XII-це пингенть прядовомсто ды XIII-це пингень ушодовомсто эрзятнень ды мокшотнень эрямодост сёрмадеесь ёвтни [[Инязор Пургаз|«Пургаз»]] исторической романсонзо (1988). «Олячинть кисэ» – омбоце исторической романсонть, кона лиссь [[1989 ие]]стэ, Кузьма Григорьевич варштась XVIII-це пингес, крестьянской войнань шкатнес.
+
+Сёрмадеесь казезель  «Якстере Тештень» орденсэ,  «Отечественной войнань II степенень» орденсэ ды «За победу над Германией в Великой Отечественной войне 1941–1945 гг.» медальсэ<ref name="ИА REGNUM" />.
+
+Эсензэ эйстэ К. Абрамов сёрмады<ref name="Алукаева">Алукаева А.П., Кочеваткина О.В.: Введение регионального компонента в учебный процесс / Учеб. пособие.  – Саранск: Тип. «         », 2005. – 84 с. {{ref-ru}}</ref>:
+{{Цитатань ушодома}} ({{Lang-myv|''«Мон, кода монь прявт героем, - эрзянь цёра. Карман одс ды одс ёвтнеме монь тиринь раськенть эрямодонть ды эрямопингеденть.»''}}
+{{oq|ru|«Я, как и главный мой герой, - сын эрзянский. Буду снова и снова рассказывать о жизни и судьбах представителей моего родного народа».}}
+{{Цитатань пе}}
 
 == Сёрмадовксонзо ==
 * «Стихть» (1940)
@@ -290,6 +302,45 @@
  |}
 
 Рузонь кельс сонетатнэнь ютавтынде С.Маршак
+
+==Библиография==
+===К. Г. Абрамовонь произведениянзо===
+#  «Пиже пакся, касынь тонть куншкас...»; «Састо весь паксятнестэ туи...»; Вень сменасо; «Тон сюлмака якстере пацине...»; Пиже розь пакся; «Кода ошов туинь эсь велестэ...»; Валске марто; «Розьтне юткс ёмавтыя мон веленть...»; Одирьва: стихть // Одксчи: эрзянь писательтнень ды поэтнэнь произведенияст сборник / [сост. В. Водясов]. – Саранск, 1941. – С. 43–55.
+#  Валонь ёвтнема валкс. – Саранск, 2002. – 608 с.
+#  Кочказь произведеният. Колмо томсо. 1-це томось: Исяк якинь Найманов: роман. – Саранск, 2004. – 624 с. 2-це томось: Исяк якинь Найманов: роман. – Саранск, 2004 – 560 с. 3-це томось: Ёвтнемат ды пьесат. – Саранск, 2004. – 720 с. 4. Сонетт: Од тундо (Гейнень коряс); «Сад пирень чувтось секс тунда цветясь...» (Шекспирэнь сонетэнзэ коряс) / ютавтыцясь К. Абрамов // Эрзянь правда. – 2010. – 8 июля. – С. 5.
+#  Вейс пурназь сёрмадовксстнэ кемгавтово томсо. 1 томось: Пургаз: роман; Сараклыч: поэма / [пурныцясь В. К. Абрамов]. – Саранск, 2013. – 528 с. 2 томось: Олячинть кисэ: роман; ёвтнемат / [пурныцясь В. К. Абрамов]. – Саранск, 2014. – 552 с.
+# Ванодо истя жо: Абрамов Кузьма Григорьевич // Брыжин- ский, А. И. Писатели Мордовии: биобиблиогр. указ. / А. И. Брыжин- ский, О. В. Пашутина, Е. И. Чернов. – Саранск, 2001. – С. 422–423.
+===К. Г. Абрамовдо литературась===
+====Рузонь кельсэ====
+#  Азыркина, Е. И. Человек и природа в мордовской прозе: монография / Е. И. Азыркина; Мордов. гос. пед. ин-т им. М. Е. Евсевьева. – Саранск: [Ред.-издат. центр МГПИ им. М. Е. Евсевьева], 2013. – 110 с.
+#  Абрамов, В. К. О ранних произведениях Кузьмы Абрамова / В. К. Абрамов // Гуманитарные науки и образование. – 2012. – No 3. – С. 102–105.
+#  Абрамов Кузьма Григорьевич: сб. материалов к 95-летию со дня рождения / сост. Ю. Ф. Юшкин; отв. ред. В. К. Абрамов. – Саранск, 2009. – 100 с.
+#  Баргова, Т. С. Памяти писателя / Т. С. Баргова // Баргова Т. С. Пластика движения: повесть, рассказы, очерки / Т. С. Баргова. – Саранск, 2009. – С. 172–176.
+#  Статных, Н. Мордовский романист / Н. Статных // Литературная Россия. – 2004. – 10 дек. – С. 5.
+#  Салаева, М. Н. К. Г. Абрамов – классик и новатор романного жанра в мордовской литературе / М. Н. Салаева // Салаева М. Н. Современная мордовская проза. – Саранск, 2000. – С. 11–15.
+#  Федосеева, Е. А. Кузьма Григорьевич Абрамов / Е. А. Федосеева // Федосеева Е. А. Исторический роман Мордовии: учебное пособие / Е. А. Федосеева. – Саранск, 2000. – С. 17–32.
+#  Кириченко, Т. Сын земли мордовской / Т. Кириченко // Известия Мордовии. – 1999. – 10 нояб. – С. 2.
+#  Зиновьев, Н. Кузьма Григорьевич Абрамов / Н. Зиновьев // Зиновьев Н. Человек и время / Н. Зиновьев. – Саранск, 1995. – С. 185–196.
+#  Кириченко, Т. Все тревоги мира: творческий портрет / Т. Кириченко // Советская Мордовия. – 1984. – 15 июля. – С. 3.
+#  Чернов, Е. И. В ногу с жизнью / Е. И. Чернов // Чер- нов, Е. И. Годы и конфликты / Е. И. Чернов. – Саранск, 1981. – С. 104–149.
+#  Нурдыгина, В. С. Поэзия и драматургия К. Абрамова / В. С. Нурдыгина // Мордовская литература последних лет. – Саранск, 1974. – С. 187–221.
+#  Кирюшкин, Б. Кузьма Григорьевич Абрамов / Б. Кирюш- кин // История мордовской советской литературы: в 3 т. – Саранск, 1971. – Т. 2. – С. 156–187.
+#  Забавина, В. Кузьма Григорьевич Абрамов: очерк жизни и творчества / В. Забавина. – Саранск, 1966. – 87 с.
+# Ванодо истя жо: Абрамов Кузьма Григорьевич // Брыжинский, А. И. Писатели Мордовии: биобиблиогр. указ. / А. И. Брыжинский, О. В. Пашутина, Е. И. Чернов. – Саранск, 2001. – С. 422–423.
+
+====Эрзянь кельсэ====
+#  Ломшин, М. И. Неень шкань мокшэрзянь эйкакшонь литературась (1980-це иетнестэ саезь – течимичис): Кузьма Григорьевич Абрамов (1914–2008) / М. И. Ломшин // Лом- шин, М. И. Мокшэрзянь эйкакшонь литературась: 5–9-це классо тонавтницятнень туртов «Родной литерату-рань» коряс тонавтомань лездамопель / М. И. Ломшин. – Саранск, 2012. – С. 122–131.
+#  Дёмин, В. «Паро поэт валсонзо пици...»: 1930-це иетнестэ «Сятко» журналсо поэзиясь / В. Дёмин // Сятко. – 2011. – No 1. – С. 66–87. – (Литературась ды эрямось).
+#  Баргова, Т. Шекспир ды Гейне эрзянь кельсэ: ютавтынзе К. Г. Абрамов / Т. Баргова // Эрзянь правда. – 2010. – 8 июля. – С. 5. 6. Артемьева, Ю. Раськенть оймесэ карми эрямо свал /Ю. Артемьева // Эрзянь правда. – 2009. – 12 нояб. – С. 4.
+#  Алёшкин, А. В. Кузьма Абрамов и мокшэрзянь литературась / А. В. Алёшкин // Абрамов Кузьма Григорьевич: сборник материалов (К 95-летию со дня рождения) / [сост. Ю. Ф. Юшкин]. – Саранск, 2009. – С. 17–20.
+#  Зиновьев, Н. В. Тиринь ёнксонь валдо / Н. В. Зиновьев // Абрамов Кузьма Григорьевич: сборник материалов (К 95-летию со дня рождения) / [сост. Ю. Ф. Юшкин]. – Саранск, 2009. – С. 24–34.
+#  Алёшкин, А. Романонзо – раськень эпос / А. Алёшкин // Сятко. – 2004. – No 11. – С. 51–55.
+#  Ломшин, М. «Ратор лейга» – «Сараклычев»: эйкакштнэнь туртов К. Г. Абрамовонь произведениянзо / М. Ломшин // Сятко. – 2004. – No 1. – С. 113–118.
+#  Шилов, Н. Од валксонь чачома чи / Н. Шилов // Чилисема. – 2003. – No 1. – С. 3.
+#  Бокин, В. Пургаздо ды Алёнадо / В. Бокин, В. Дёмин // Сятко. – 2000. – No 9. – С. 79–90; No 10. – С. 109–115.
+#  Дёмин, В. Шкась ды комедиясь / В. Дёмин // Сятко. – 1990. – No 5. – С. 69–71.
+#  Нурдыгина, В. С. Нартимксэсь – сэпей тикше / В. С. Нурдыгина // Сятко. – 1973. – No 2. – С. 71–76.
+#  Борисов, А. Живой Эрьзя / А. Борисов // Сятко. – 1972. – No 2. – С. 72–76.
 
 
 ==  Лисьмапря ==
