Better map ([[Commons:Commons:GlobalReplace|GlobalReplace v0.6.5]])

--- a/ЛопаПарцун:ПозКарта_Азербайджан_Республикась.mw
+++ b/ЛопаПарцун:ПозКарта_Азербайджан_Республикась.mw
@@ -6,7 +6,7 @@
 |right = 51.0
 |image = {{#switch:{{{2|}}}
  |physical = Azerbaijan relief location map.jpg
- |#default = Azerbaijan location map.svg
+ |#default = Azerbaijan adm location map.svg
 }}
 }}<noinclude>{{ПозКарта/Инфо|Азербайджан}}
 
